flexoffice/backend/authentication/authentication-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flex-app-authentication
  namespace: flex-authentication
  labels:
    app: flex-authentication
spec:
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: flex-authentication
  replicas: 1
  template:
    metadata:
      labels:
        app: flex-authentication
    spec:
      imagePullSecrets:
      - name: github-secret
      containers:
      - name: flexoffice-authentication
        image: ghcr.io/jonastschumi/flexoffice_authentication:0.0.84
        imagePullPolicy: Always
        ports:
        - containerPort: 8081
