flexoffice/backend/authentication/authentication-postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flex-postgres-authentication
  namespace: flex-authentication
  labels:
    app: flex-postgres-authentication
spec:
  selector:
    matchLabels:
      app: flex-postgres-authentication
  replicas: 1
  template:
    metadata:
      labels:
        app: flex-postgres-authentication
    spec:
      containers:
      - name: postgres
        image: postgres:15.2-alpine
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: /var/lib/postgresql/data/pgdata
          name: postgredb
      volumes:
        - name: postgredb
          persistentVolumeClaim:
            claimName: flex-authentication-pvc
