flexoffice/backend/authentication/authentication-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flex-postgres-authentication
  namespace: flex-authentication
spec:
  selector:
    app: flex-postgres-authentication
  type: ClusterIP
  ports:
    - name: http
      port: 5432
