flexoffice/backend/authentication/authentication-ingress-https.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flex-authentication-https
  namespace: flex-authentication
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: cloudflare
spec:
  rules:
  - host: "api.flex.tschumi.me"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flex-authentication
            port:
              number: 3001
  tls:
  - hosts:
    - "api.flex.tschumi.me"
    secretName: flex-authentication
